implemented requested changes

--- a/simple/static/index.html
+++ b/simple/static/index.html
@@ -16,7 +16,7 @@
 
 			(function() {
 				WebAssembly.instantiateStreaming(fetch("simple.wasm"), {env: env, zjb: zjb.imports}).then(function (results) {
-					zjb.instance = results.instance;
+					zjb.setInstance(results.instance);
 					results.instance.exports.main();
 				});
 			})();
